--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vitalets/google-translate-api": "^9.2.0",
     "@xct007/tiktok-scraper": "^1.0.2",
     "@whiskeysockets/baileys": "git+https://github.com/DASTAGHIR/Baileys.git#master",
+    "@StarlightsTeam/Scraper": "github:StarlightsTeam/StarlightsTeam-Scraper",
     "acrcloud": "^1.4.0",
     "api-dylux": "^1.7.2",
     "awesome-phonenumber": "^2.68.0",
